fix: shift QR code right with margin-left 40px

--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ body {
     width: 80px;
     height: 80px;
     justify-self: center;
-    margin-left: 30px;
+    margin-left: 40px;
 }
 
 .qr-svg {
